<resources>
    <string name="app_name">AI.js Pro</string>
    <string name="text_new_file">新建文件</string>
    <string name="text_create_fail">创建失败</string>
    <string name="text_please_input_name">请输入名称</string>
    <string name="text_name">名称</string>
    <string name="text_sort">排序方式</string>
    <string name="text_go_to_setting">去设置</string>
    <string name="explain_accessibility_permission">软件需要打开\"无障碍服务\"才能运行，请在随后的设置中选择\"AI.js Pro\"并开启服务。\n您也可以稍后在侧拉菜单中设置。</string>
    <string name="text_cancel">取消</string>
    <string name="text_path_is_empty">路径为空</string>
    <string name="text_file_not_exists">文件不存在</string>
    <string name="text_no_file_rw_permission">无文件读写权限</string>
    <string name="text_no_accessibility_permission">无障碍服务未启动</string>
    <string name="text_drawer_close">关闭侧拉菜单</string>
    <string name="text_drawer_open">打开侧拉菜单</string>
    <string name="text_undo">撤销</string>
    <string name="text_redo">重做</string>
    <string name="text_save">保存</string>
    <string name="text_run">运行</string>
    <string name="text_alert">提示</string>
    <string name="edit_exit_without_save_warn">内容尚未保存，您确定要退出吗？</string>
    <string name="text_save_and_exit">保存并退出</string>
    <string name="text_exit_directly">直接退出</string>
    <string name="text_setting">设置</string>
    <string name="text_exit">退出</string>
    <string name="text_auto_operate_service">无障碍服务</string>
    <string name="text_about">关于</string>
    <string name="text_licenses">开放源代码许可</string>
    <string name="text_do_not_remind_again">不再提示</string>
    <string name="copyright">Copyright©2026 AI.js Pro</string>
    <string name="developer">Jdkshen</string>
    <string name="qq" translatable="false">1810110990</string>
    <string name="email" translatable="false">1810110990@qq.com</string>
    <string name="github">软件源代码</string>
    <string name="text_already_copy_to_clip">已复制到剪贴板</string>
    <string name="my_github">https://github.com/Jdkshen/ai.js-pro</string>
    <string name="share_app">[AI.js Pro]下载地址：http://www.coolapk.com/apk/com.jdkshen.aijspro </string>
    <string name="text_floating_window">悬浮窗</string>
    <string name="text_error_report">错误报告</string>
    <string name="text_press_again_to_exit">再按一次退出程序</string>
    <string name="text_already_stop_n_scripts">已停止%d个正在运行的脚本</string>
    <string name="text_start_running">开始运行</string>
    <string name="text_open_by_other_apps">用其他应用打开</string>
    <string name="text_rename">重命名</string>
    <string name="text_send_shortcut">创建快捷方式</string>
    <string name="text_already_create">已创建</string>
    <string name="text_delete">删除</string>
    <string name="text_already_delete">已删除</string>
    <string name="text_error">错误</string>
    <string name="text_copy_debug_info">复制调试信息</string>
    <string name="text_it_is_the_developer_of_app">这是软件开发者(。・・)ノ</string>
    <string name="text_please_choose">请选择</string>
    <string name="text_crash">崩溃了o(≧口≦)o</string>
    <string name="crash_feedback">将会自动提交错误信息。您也可以手动复制调试信息提交给开发者(*^▽^*)或者点击\"退出\"退出程序o(╥﹏╥)o</string>
    <string name="text_clear">清空</string>
    <string name="text_console">控制台</string>
    <string name="text_log">日志</string>
    <string name="text_report_fail">提交失败</string>
    <string name="text_report_succeed">提交成功</string>
    <string name="edit_and_run_handle_intent_error">无法处理文件</string>
    <string name="text_issue_report">问题反馈</string>
    <string name="text_script_record">录制脚本</string>
    <string name="text_start_record">开始录制</string>
    <string name="text_recorded">录制结束</string>
    <string name="text_copy_to_clip">复制到剪贴板</string>
    <string name="text_file_write_fail">文件写入失败</string>
    <string name="text_use_volume_control_record">使用音量下键控制</string>
    <string name="summary_use_volume_control_record">开启悬浮窗后每次音量下键会开始或停止脚本录制</string>
    <string name="key_use_volume_control_record">key_use_volume_control_record</string>
    <string name="text_mobile_qq_not_installed">未安装手机QQ</string>
    <string name="text_edit">编辑</string>
    <string name="key_max_length_for_code_completion">key_max_length_for_code_completion</string>
    <string name="text_max_length_for_code_completion">代码补全最大文件长度</string>
    <string name="text_file_exists">文件已存在</string>
    <string name="text_accessibility_service">无障碍服务</string>
    <string name="text_enable_accessibility_service_by_root">通过Root权限自动启用服务</string>
    <string name="text_auto_operate_service_enabled_but_not_running">无障碍服务已启用但并未运行，这可能是安卓的BUG，您可能需要重启手机或重启无障碍服务</string>
    <string name="key_enable_accessibility_service_by_root">key_enable_accessibility_service_by_root</string>
    <string name="text_enable_accessibility_service_by_root_timeout">使用Root权限启动无障碍服务超时</string>
    <string name="text_enable_accessibility_service_fast_success">已快速开启无障碍服务</string>
    <string name="text_enable_accessibility_service_fast_failed">快速开启失败，已转到系统设置</string>
    <string name="summary_enable_accessibility_service_by_root">开启后运行脚本会使用Root权限自动开启无障碍服务</string>
    <string name="text_appearance">外观</string>
    <string name="text_theme_color">主题色</string>
    <string name="text_select_image">选择图片</string>
    <string name="text_help">帮助</string>
    <string name="text_no_floating_window_permission">没有悬浮窗权限</string>
    <string name="text_no_accessibility_permission_to_capture">无障碍服务未启动</string>
    <string name="text_record_msg">录制提示</string>
    <string name="text_text_changed">文字改变</string>
    <string name="text_scrolled">滑动</string>
    <string name="text_long_clicked">长按</string>
    <string name="text_clicked">点击</string>
    <string name="text_copy_to_my_scripts">导入到我的脚本</string>
    <string name="text_import_succeed">导入成功</string>
    <string name="text_current_activity">当前活动:</string>
    <string name="text_current_package">当前应用包名:</string>
    <string name="go_to_accessibility_settings"><![CDATA[请打开设置->无障碍服务->AI.js Pro并开启]]></string>
    <string name="text_script_running">脚本运行</string>
    <string name="key_use_volume_control_running">key_use_volume_control_running</string>
    <string name="text_use_volume_to_stop_running">音量上键停止所有脚本</string>
    <string name="summary_use_volume_to_stop_running">需要无障碍服务或 Root 才能监听到音量键</string>
    <string name="text_need_to_enable_accessibility_service">需要启用无障碍服务</string>
    <string name="text_import_fail">导入失败</string>
    <string name="text_no_brower">没有浏览器耶o(╯□╰)o快去安装一个吧</string>
    <string name="text_refresh">刷新</string>
    <string name="notice_no_running_script"><![CDATA[没有正在运行的脚本 φ(>ω<*)]]></string>
    <string name="text_please_choose_a_script">请选择脚本</string>
    <string name="text_edit_prepare_script">编辑预执行脚本</string>
    <string name="text_pre_execute_script">预执行脚本</string>
    <string name="text_clear_pre_execute_script">清空预执行脚本</string>
    <string name="text_clear_file_selection">重置脚本文件选择</string>
    <string name="summary_pre_execute_script">将在脚本文件执行前执行</string>
    <string name="text_checking_update">正在检查更新</string>
    <string name="text_new_version">新版本</string>
    <string name="text_check_update_error">检查更新失败Orz</string>
    <string name="text_check_update_error_detail">检查更新失败：%1$s（自建更新源可在设置里修改）</string>
    <string name="text_update_source">更新源</string>
    <string name="text_update_source_default">默认（GitHub）</string>
    <string name="text_update_source_hint">留空 = 用内置的 GitHub Releases；也可以填自己的网址（如 http://192.168.1.5:8080/update.json），局域网、自托管都行</string>
    <string name="text_update_source_invalid">地址要以 http:// 或 https:// 开头</string>
    <string name="text_check_for_updates">检查更新</string>
    <string name="text_is_latest_version">已经是最新版本</string>
    <string name="text_version_too_old">版本过低</string>
    <string name="warning_version_too_old">当然版本为公测版，显现和潜在的问题很多，不再适合继续使用，</string>
    <string name="text_update">更新</string>
    <string name="text_release_notes">更新日志</string>
    <string name="text_update_history_count">更新历史（%1$d 个版本）</string>
    <string name="text_expand">展开</string>
    <string name="text_collapse">收起</string>
    <string name="text_download_url">下载地址</string>
    <string name="text_directly_download">直接下载</string>
    <string name="text_download_failed">下载失败</string>
    <string name="text_update_package_rejected">更新包不可用：%1$s</string>
    <string name="text_do_not_ask_again_for_this_version">此版本不再提示</string>
    <string name="text_code_beautify">格式化代码</string>
    <string name="text_processing">处理中</string>
    <string name="text_guard_mode">保护模式</string>
    <string name="summary_guard_mode">在本软件界面无法运行自动操作命令以免误触</string>
    <string name="key_guard_mode" translatable="false">key_guard_mode</string>
    <string name="text_layout_inspector_is_dumping">布局分析中</string>
    <string name="text_force_stop">强制停止</string>
    <string name="text_execution_finished">\n------------\n[%1$s]运行结束，用时%2$.3f秒</string>
    <string name="text_again">又</string>
    <string name="text_again_and_again">又双</string>
    <string name="text_again_and_again_again">又双叒</string>
    <string name="text_again_and_again_again_again">又双叒叕</string>
    <string name="debug">连接电脑</string>
    <string name="text_server_address">服务器地址</string>
    <string name="text_annunciation">声明</string>
    <string name="text_about_me_and_repo">关于项目与开发者</string>
    <string name="text_attribute">属性</string>
    <string name="text_value">值</string>
    <string name="text_show_widget_infomation">查看控件信息</string>
    <string name="text_show_layout_hierarchy">在布局层次中查看</string>
    <string name="text_show_layout_bounds">在布局范围中查看</string>
    <string name="text_more">更多</string>
    <string name="text_script_save_successfully">保存成功，请刷新目录</string>
    <string name="text_run_repeatedly">循环运行</string>
    <string name="text_loop_interval">循环间隔(秒)</string>
    <string name="text_loop_delay">延迟执行(秒)</string>
    <string name="text_loop_times">循环次数</string>
    <string name="hint_loop_times">0为无限循环</string>
    <string name="hint_loop_delay">延迟多少秒后开始循环</string>
    <string name="text_number_format_error">格式错误</string>
    <string name="text_accessibility_settings">打开无障碍服务</string>
    <string name="text_enable_accessibitliy_service_by_root_failed">使用root权限开启失败</string>
    <string name="text_on_progress">处理中</string>
    <string name="text_delete_failed">删除失败</string>
    <string name="text_edit_script">编辑脚本</string>
    <string name="text_run_script">运行脚本</string>
    <string name="text_import_script">导入脚本文件</string>
    <string name="key_record_toast">key_record_toast</string>
    <string name="key_root_record_out_file_type">key_root_record_out_file_type</string>
    <string name="text_root_record_out_file_type">Root录制生成文件类型</string>
    <string name="text_binary">binary</string>
    <string name="key_stable_mode">key_stable_mode</string>
    <string name="summary_stable_mode">开启后布局分析更稳定，但小部分脚本可能无法正常运行。重启无障碍服务生效</string>
    <string name="text_stable_mode">稳定模式</string>
    <string name="key_enable_observe_key">key_enable_observe_key</string>
    <string name="text_directory">文件夹</string>
    <string name="text_file">文件</string>
    <string name="text_script_root">内部存储  ›  脚本</string>
    <string name="text_internal_storage">内部存储</string>
    <string name="text_script_subdirectory">脚本  ›  %1$s</string>
    <string name="text_directory_modified">文件夹\n修改于 %1$s</string>
    <string name="text_file_modified">%1$s\n修改于 %2$s</string>
    <string name="text_home">首页</string>
    <string name="text_navigation">导航</string>
    <string name="text_tutorial">教程</string>
    <string name="text_community">资源</string>
    <string name="text_manage">管理</string>
    <string name="not_login">未登录</string>
    <string name="text_volume_down_control">音量下键控制</string>
    <string name="text_others">其他</string>
    <string name="text_import">导入</string>
    <string name="text_click_too_frequently">您的操作太快啦ヽ(#`Д´)ﾉ</string>
    <string name="text_username">用户名</string>
    <string name="text_password">密码</string>
    <string name="text_login">登录</string>
    <string name="text_forgot_password">忘记密码?</string>
    <string name="text_search">搜索</string>
</resources>