<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_log"
        android:icon="@drawable/ic_log_white_24dp"
        android:title="@string/text_log"
        app:iconTint="?attr/colorOnSurfaceVariant"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_documentation"
        android:icon="@drawable/ic_bookmark_white_24dp"
        android:title="@string/text_tutorial"
        app:iconTint="?attr/colorOnSurfaceVariant"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:imeOptions="actionSearch"
        android:inputType="text"
        android:title="@string/text_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:iconTint="?attr/colorOnSurfaceVariant"
        app:showAsAction="always|collapseActionView"/>
</menu>
